syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.microservice.proto";
option java_outer_classname = "LogsProto";

service Logs {
  rpc addLogs(addLogsParams) returns (Empty);
}

message addLogsParams {
  string userId = 1;
  int32 responseCode = 2;
  string remark = 3;
}

message Empty {
}